Se le agrega imagen de fondo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-    <!-- Dropdown -->
+  <div class="container-fluid">
+        <!-- Dropdown -->
     <div id="cualidad" class="dropup-center dropup">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           Cualidades
@@ -35,6 +36,9 @@
           <li><a id="linaje3" class="dropdown-item" href="#">Sangre pura</a></li>
         </ul>
       </div>
+  </div>
+
+
       <!-- Dropdown end -->
       <script src="app.js"></script>
 </body>
